feat(devops): AMI for postgresql.

--- a/amis/Dockerfile
+++ b/amis/Dockerfile
@@ -5,4 +5,5 @@ RUN packer plugins install github.com/hashicorp/amazon
 WORKDIR /work
 
 COPY bare.json /work/bare.json
+COPY postgres.json /work/postgres.json
 COPY files /work/files/
