--- a/amis/files/telegraf-bare.conf
+++ b/amis/files/telegraf-bare.conf
@@ -5841,7 +5841,7 @@
 #
 #   ## Parses tags in the datadog statsd format
 #   ## http://docs.datadoghq.com/guides/dogstatsd/
-    parse_data_dog_tags = true
+#   parse_data_dog_tags = true
 #
 #   ## Parses datadog extensions to the statsd format
     datadog_extensions = true
