--- a/amis/files/telegraf-postgresql.conf
+++ b/amis/files/telegraf-postgresql.conf
@@ -5841,7 +5841,7 @@
 #
 #   ## Parses tags in the datadog statsd format
 #   ## http://docs.datadoghq.com/guides/dogstatsd/
-    parse_data_dog_tags = false
+#   parse_data_dog_tags = false
 #
 #   ## Parses datadog extensions to the statsd format
     datadog_extensions = false
