--- a/amis/Dockerfile
+++ b/amis/Dockerfile
@@ -4,6 +4,5 @@ RUN packer plugins install github.com/hashicorp/amazon
 
 WORKDIR /work
 
-COPY bare.json /work/bare.json
-COPY postgres.json /work/postgres.json
+COPY *.json /work/
 COPY files /work/files/
