feat(tf): Postgres authorized_keys on dev db.

--- a/terraform/fk/user_data_postgres.yaml
+++ b/terraform/fk/user_data_postgres.yaml
@@ -2,6 +2,13 @@
 hostname: ${hostname}
 fqdn: ${hostname}.${zone_name}
 manage_etc_hosts: true
+
+users:
+  - default
+  - name: 'postgres'
+    ssh_authorized_keys:
+      - '${postgres_public_key}'
+
 write_files:
   - path: /etc/user_data.env
     content: |
